--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -48,6 +48,9 @@ a:hover {
     white-space: nowrap;
     font-size: 14px;
     line-height: 1;
+
+    display: flex;
+    flex-direction: column;
 }
 
 #path {
@@ -59,15 +62,12 @@ a:hover {
 }
 
 #meta {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding: 5px;
+    display: none;
 }
 
 #favs-folders {
     border-bottom: 1px;
-    height: calc(50vh - 14px - 72px);
+    height: calc(50vh - 40px);
     display: flex;
 }
 
